# dsc259r-2026-wi

./: Gemfile  Makefile  _config.yml  pyproject.toml  tech_support.md
labs/lab00/: .OTTER_LOG  lab.ipynb  lab.py
labs/lab01/: .OTTER_LOG  lab.ipynb  lab.py
labs/lab02/: .OTTER_LOG  lab-validation.py  lab.ipynb  lab.py  tricky_1.csv
labs/lab03/: .OTTER_LOG  lab.ipynb  lab.py
labs/lab04/: .OTTER_LOG  lab.ipynb  lab.py
lectures/lec02/: lec02-live.ipynb
lectures/lec03/: lec03-live.ipynb
lectures/lec06/: lec06-live.ipynb
lectures/lec10/: lec10-live.ipynb  lec10.html  lec10.ipynb
lectures/lec10/data/: lec10_ex2.html
lectures/lec13/: lec13-live.html  lec13-live.ipynb
lectures/lec17/: lec17-live.html  lec17-live.ipynb
lectures/lec18/: dsc80_utils.py  lec18-live.html  lec18-live.ipynb
projects/proj01/: .OTTER_LOG  Untitled.ipynb  project.py
resources/lectures/lec01/: lec01-live.html  lec01-live.ipynb
resources/lectures/lec02/: lec02.ipynb
resources/lectures/lec03/: lec03-live.html  lec03-live.ipynb  lec03.html  lec03.ipynb
resources/lectures/lec04/: lec04-live.ipynb
resources/lectures/lec07/: lec07-live.html  lec07-live.ipynb
resources/lectures/lec10/: lec10-live.html  lec10.html  lec10.ipynb
resources/lectures/lec11/: lec11-live.html  lec11-live.ipynb  lec11.html  lec11.ipynb
resources/lectures/lec13/: lec13-live.html  lec13-live.ipynb
resources/lectures/lec14/: lec14-live.html  lec14-live.ipynb
resources/lectures/lec15/: lec15-live.html  lec15-live.ipynb  lec15.html  lec15.ipynb
resources/lectures/lec16/: lec16-live.html  (+1 more)
